--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,15 +5,15 @@ author:
 homepage:
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
-  flutter: ">=1.17.0 <2.0.0"
+  sdk: ">=2.12.0 <3.0.0"
+  flutter: ">=2.0.1 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
 
   get:  
-  equatable:
+  equatable: ^2.0.0
 
 dev_dependencies:
   flutter_test:
